[build]更新storybook 设置

--- a/src/Introduction.mdx
+++ b/src/Introduction.mdx
@@ -8,7 +8,7 @@ import Plugin from "./assets/plugin.svg";
 import Repo from "./assets/repo.svg";
 import StackAlt from "./assets/stackalt.svg";
 
-<Meta title="Today-UI/Introduction" />
+<Meta title="组件库介绍" />
 
 <style>
   {`
