[feat] 添加file-tree 组件

--- a/src/Introduction.mdx
+++ b/src/Introduction.mdx
@@ -116,4 +116,8 @@ import StackAlt from "./assets/stackalt.svg";
 
 # TodayUI
 
-TodayUI 是一个提供 float 元素组件的 UI 库，包括 dropdown，tooltip，modal，confirm，底层使用 @floating-ui/vue
+想单独使用 vue3 相关弹框类组件（tooltip,dropdown, menu, context,modal,confirm），不想引入一整个组件库,可以使用本组件库，本组件库准备做小而美的关于弹出层 vue3 组件库。
+
+## 依赖
+
+主要依赖 @floating-ui/vue。@floating-ui/vue 主要是对 @floating-ui/dom 的一个封装，@floating-ui/dom 是一个很好用的浮动元素的库，官方实现了 @floating-ui/react-dom。use-floating 是对标@floating-ui/react-dom 实现的一个底层对接@floating-ui/dom 的 use hooks 库。
